Update URL usage to URI